subscribe iframe and facebook fix

--- a/wp-content/plugins/really-static/log.html
+++ b/wp-content/plugins/really-static/log.html
@@ -1271,3 +1271,20 @@
 21 Oct 2014 18:40:55: publ POST 498
 21 Oct 2014 18:40:55: publ POST 583
 21 Oct 2014 18:40:55: delteattach:4
+04 Nov 2014 17:57:28: Array
+(
+    [delete] => Array
+        (
+            [http://localhost:8888/?page_id=5] => 1
+            [http://localhost:8888/?page_id=10] => 1
+            [http://localhost:8888/?page_id=474] => 1
+            [http://localhost:8888/?page_id=9] => 1
+        )
+
+)
+
+04 Nov 2014 17:57:28: Verbinde
+04 Nov 2014 17:57:28: Deleteing File: http://localhost:8888/?page_id=5
+04 Nov 2014 17:57:28: Deleteing File: http://localhost:8888/?page_id=10
+04 Nov 2014 17:57:28: Deleteing File: http://localhost:8888/?page_id=474
+04 Nov 2014 17:57:28: Deleteing File: http://localhost:8888/?page_id=9
